--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>vue-battle</title>
     <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_830496_tdj3rb0099r.css">
   </head>
   <body>
     <div id="app"></div>
